--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,18 +10,23 @@
   </head>
 
   <body>
-    <header>
-      <a href="./index.html"  class="logo" tabindex="0">
+    <a href="#menu" class="skip-link">Aller au menu</a>
+    <a href="#main" class="skip-link">Aller au contenu principal</a>
+    <a href="#footer" class="skip-link">Aller au pied de page</a>
+
+    <header id="menu">
+      <a href="./index.html" class="logo" aria-label="Retour à la page d'accueil Mon Petit Geste">
         <img
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="Logo de mon petit geste, main qui tien un coeur"
+          alt=""
+          role="presentation"
         />
-        <h2 class="site-name">
-          <span class="site-title">Mon Petit</span>
-          <strong class="site-subtitle">Geste</strong>
-        </h2>
       </a>
+      <h1 class="site-name">
+        <span class="site-title">Mon Petit</span>
+        <strong class="site-subtitle">Geste</strong>
+      </h1>
 
       <nav class="nav" aria-label="Navigation principale">
         <ul>
@@ -32,7 +37,7 @@
       </nav>
     </header>
 
-    <main class="home">
+    <main class="home" id="main">
       <h1>Les gestes du quotidien</h1>
       <h2>Se sentir bien dans un corps et un esprit sain</h2>
       <section class="cards">
@@ -139,27 +144,29 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo">
+    <footer id="footer">
+      <a href="./index.html" class="logo" aria-label="Retour à la page d'accueil Mon Petit Geste">
         <img
-          aria-hidden="true"
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="Logo de mon petit geste, main qui tien un coeur"
+          alt=""
+          role="presentation"
         />
-        <h2 class="site-name">
-          <span class="site-title">Mon Petit</span>
-          <strong class="site-subtitle">Geste</strong>
-        </h2>
       </a>
+      <h1 class="site-name">
+        <span class="site-title">Mon Petit</span>
+        <strong class="site-subtitle">Geste</strong>
+      </h1>
     
-      <ul class="footer-lien" role="navigation" aria-label="pied de page">
-        <li><a href="./matin.html">Le matin</a></li>
-        <li><a href="./apres-midi.html">L'après midi</a></li>
-        <li><a href="./soir.html">Le soir</a></li>
-        <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
-        <li><a href="./mentions-legales.html">Mentions légales</a></li>
-      </ul>
+      <nav aria-label="Pied de page">
+        <ul class="footer-lien">
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+          <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
+          <li><a href="./mentions-legales.html">Mentions légales</a></li>
+        </ul>
+      </nav>
     
       <p>2025 © Kyongsong</p>
     </footer>
